// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlOptimization/Detail render detail page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center css-dev-only-do-not-override-txh9fw"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-12 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    >
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        *
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       customer 
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       c_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        in
                      </span>
                       (
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       o_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders 
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       O_ORDERDATE
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-number"
                      >
                        1
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        year
                      </span>
                      )
                    </pre>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-12 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        重写后SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    >
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        *
                      </span>
                      

                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       customer

                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       customer.c_custkey 
                      <span
                        class="hljs-keyword"
                      >
                        in
                      </span>
                       (
          
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       orders.o_custkey
          
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders
          
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       orders.O_ORDERDATE 
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                       
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-string"
                      >
                        '1'
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        YEAR
                      </span>
                      
          )

                    </pre>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <section>
            <h5
              class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
            >
              本次重写优化应用的规则
            </h5>
            <section
              class="css-oyyzvz"
            >
              <a
                class="ant-typography rule-name css-dev-only-do-not-override-txh9fw"
              >
                IN子查询优化
              </a>
              <section
                class="css-1m486f3"
              >
                <div
                  class="css-4mzo37"
                >
                  <div
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
                  >
                    <span>
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        *
                      </span>
                      

                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       customer

                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        exists
                      </span>
                       (
          
                      <span
                        class="hljs-keyword"
                      >
                        select
                      </span>
                       orders.o_custkey
          
                      <span
                        class="hljs-keyword"
                      >
                        from
                      </span>
                       orders
          
                      <span
                        class="hljs-keyword"
                      >
                        where
                      </span>
                       orders.O_ORDERDATE 
                      <span
                        class="hljs-operator"
                      >
                        &gt;=
                      </span>
                       
                      <span
                        class="hljs-built_in"
                      >
                        current_date
                      </span>
                       
                      <span
                        class="hljs-operator"
                      >
                        -
                      </span>
                       
                      <span
                        class="hljs-type"
                      >
                        interval
                      </span>
                       
                      <span
                        class="hljs-string"
                      >
                        '1'
                      </span>
                       
                      <span
                        class="hljs-keyword"
                      >
                        YEAR
                      </span>
                      
          
                      <span
                        class="hljs-keyword"
                      >
                        and
                      </span>
                       orders.o_custkey 
                      <span
                        class="hljs-operator"
                      >
                        =
                      </span>
                       customer.c_custkey
          )

                    </span>
                  </div>
                  <div
                    class="css-1s8kb8e"
                  >
                    <span
                      aria-label="copy"
                      class="anticon anticon-copy"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="copy"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </section>
            </section>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="css-4mzo37"
            >
              <div
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
              >
                <span>
                  <span
                    class="hljs-keyword"
                  >
                    CREATE
                  </span>
                   INDEX PAWSQL_IDX1327276661 
                  <span
                    class="hljs-keyword"
                  >
                    ON
                  </span>
                   optimization.orders(o_custkey,o_orderdate);
                </span>
              </div>
              <div
                class="css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-txh9fw"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success css-dev-only-do-not-override-txh9fw"
              >
                23
                %
              </span>
            </span>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            执行计划(优化前)
          </h5>
          <section
            class="css-1r0fjn5"
          >
            <span
              class="copy-icon"
            >
              <div
                class="css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </span>
            <pre
              class="code-wrapper"
            >
              <span
                class="hljs-operator"
              >
                -
              </span>
              <span
                class="hljs-operator"
              >
                &gt;
              </span>
               Nested loop 
              <span
                class="hljs-keyword"
              >
                inner
              </span>
               
              <span
                class="hljs-keyword"
              >
                join
              </span>
                (cost
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.55
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              ) (actual 
              <span
                class="hljs-type"
              >
                time
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.0375
              </span>
              .
              <span
                class="hljs-number"
              >
                .0
              </span>
              <span
                class="hljs-number"
              >
                .0375
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0
              </span>
               loops
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              )
            </pre>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            执行计划(优化后)
          </h5>
          <section
            class="css-1r0fjn5"
          >
            <span
              class="copy-icon"
            >
              <div
                class="css-1s8kb8e"
              >
                <span
                  aria-label="copy"
                  class="anticon anticon-copy"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="copy"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                    />
                  </svg>
                </span>
              </div>
            </span>
            <pre
              class="code-wrapper"
            >
              <span
                class="hljs-operator"
              >
                -
              </span>
              <span
                class="hljs-operator"
              >
                &gt;
              </span>
               Nested loop 
              <span
                class="hljs-keyword"
              >
                inner
              </span>
               
              <span
                class="hljs-keyword"
              >
                join
              </span>
                (cost
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1.1
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                3
              </span>
              ) (actual 
              <span
                class="hljs-type"
              >
                time
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0.0306
              </span>
              .
              <span
                class="hljs-number"
              >
                .0
              </span>
              <span
                class="hljs-number"
              >
                .0306
              </span>
               
              <span
                class="hljs-keyword"
              >
                rows
              </span>
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                0
              </span>
               loops
              <span
                class="hljs-operator"
              >
                =
              </span>
              <span
                class="hljs-number"
              >
                1
              </span>
              )
            </pre>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Detail render detail page when optimized sql is empty 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center css-dev-only-do-not-override-txh9fw"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    />
                  </section>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  class="ant-typography css-dev-only-do-not-override-txh9fw"
                >
                  暂无需要优化的索引
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="anticon"
                  role="img"
                >
                  <svg
                    height="18"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M398.494886 365.118251C537.464307 288.294974 427.87184 92.24251 555.08141 84.194704 742.605244 92.841234 655.197922 384 655.197922 384L772.65207 384C855.435454 384 905.576924 448.722763 885.198573 528.562338L817.961841 791.986598C806.271712 837.786918 758.737126 874.666667 711.712053 874.666667L448.133741 874.666667C433.864986 874.666667 420.242927 871.867204 407.791343 866.787953 384.000002 853.81293 384 830.740885 384 830.740885L384 401.323665C384 401.323665 384.758274 376.156277 398.494886 365.118251ZM304.189762 874.666667 227.009286 874.666667C191.72855 874.666667 160.809916 846.165515 157.951887 811.023593L128.398809 447.643074C125.540197 412.493975 151.875017 384 187.012764 384L304.829301 384C343.692282 387.294701 341.333333 421.731772 341.333333 421.731772L341.333333 842.852864C341.333333 842.852864 343.401099 870.898027 304.189762 874.666667Z"
                      fill="#FF7043"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-txh9fw"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success css-dev-only-do-not-override-txh9fw"
              >
                0
                %
              </span>
            </span>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Detail render detail page when params empty 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization/overview/1234567"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回性能优化概览
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-abfbw3"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL重写
          </h5>
          <div
            class="ant-row ant-row-center css-dev-only-do-not-override-txh9fw"
            style="margin-left: -10px; margin-right: -10px;"
          >
            <div
              class="ant-col ant-col-24 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 10px; padding-right: 10px;"
            >
              <div
                class="ant-card ant-card-hoverable css-121p60i css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <header
                    class="card-header"
                  >
                    <div
                      class="title"
                    >
                      <div
                        class="title-cont"
                      >
                        原SQL
                      </div>
                    </div>
                    <div
                      class="extra"
                    >
                      <div
                        class="css-1s8kb8e"
                      >
                        <span
                          aria-label="copy"
                          class="anticon anticon-copy"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="copy"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </header>
                  <section
                    class="card-cont"
                  >
                    <pre
                      class="code-pre"
                    />
                  </section>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            推荐索引
          </h5>
          <section
            class="css-1m486f3"
          >
            <div
              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <span
                  class="ant-typography css-dev-only-do-not-override-txh9fw"
                >
                  暂无需要优化的索引
                </span>
              </div>
              <div
                class="ant-space-item"
              >
                <span
                  class="anticon"
                  role="img"
                >
                  <svg
                    height="18"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M398.494886 365.118251C537.464307 288.294974 427.87184 92.24251 555.08141 84.194704 742.605244 92.841234 655.197922 384 655.197922 384L772.65207 384C855.435454 384 905.576924 448.722763 885.198573 528.562338L817.961841 791.986598C806.271712 837.786918 758.737126 874.666667 711.712053 874.666667L448.133741 874.666667C433.864986 874.666667 420.242927 871.867204 407.791343 866.787953 384.000002 853.81293 384 830.740885 384 830.740885L384 401.323665C384 401.323665 384.758274 376.156277 398.494886 365.118251ZM304.189762 874.666667 227.009286 874.666667C191.72855 874.666667 160.809916 846.165515 157.951887 811.023593L128.398809 447.643074C125.540197 412.493975 151.875017 384 187.012764 384L304.829301 384C343.692282 387.294701 341.333333 421.731772 341.333333 421.731772L341.333333 842.852864C341.333333 842.852864 343.401099 870.898027 304.189762 874.666667Z"
                      fill="#FF7043"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </section>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            性能提升
          </h5>
          <section
            class="css-1m486f3"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-txh9fw"
            >
              本次优化实施后，预计本SQL的性能将提升
              <span
                class="ant-typography ant-typography-success css-dev-only-do-not-override-txh9fw"
              >
                0
                %
              </span>
            </span>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;
